--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,18 @@
   line-height: 1.5;
   font-weight: 400;
 
+  --orange-web: #ffb350;
+  --butterscotch: #e59040;
+  --picton-blue: #36a1d3;
+  --yale-blue: #1c3b5f;
+  --russian-violet: #15002e;
+
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
+
+  overflow: hidden;
+  max-height: 100vh;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -25,15 +34,20 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  max-height: 100vh;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 1em;
   line-height: 1.1;
+  color: var(--butterscotch);
+}
+
+h3 {
+  font-size: 1em;
+  line-height: 1.1;
+  color: var(--yale-blue);
 }
 
 button {
@@ -66,4 +80,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+#root {
+  max-height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  margin: 0;
+  padding: 0;
 }
